@@ -1,3 +1,9 @@
+2015-03-16  Michael Wiegand <michael.wiegand@greenbone.net>
+
+	* tools/openvas-nvt-sync.in: Support for migration of unsigned files
+	to the "private/" subdirectory has been removed as it was obsolete
+	since the retirement of OpenVAS-5.
+
 2015-03-03  Hani Benhabiles  <hani.benhabiles@greenbone.net>
 
 	* src/ntp.c, src/attack.c: Remove inused includes.
